kubernetes/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canvas3t
  labels:
    environment: production
